<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.UserSignupActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="350dp"
            android:layout_height="65dp"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="350dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="350dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/confirm_password_edittext"
            android:layout_width="350dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/app_color"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textSize="20dp" />

</RelativeLayout>