<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/task_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/recentTask"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
    android:id="@+id/status_layout"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
        android:layout_below="@id/task_text"
        android:layout_marginTop="40dp"
        android:padding="5dp">

    <TextView
        android:id="@+id/FirstText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/parts"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_weight="1">
    </TextView>

    <TextView
        android:id="@+id/SecondText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clinet_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_weight="1">
    </TextView>

    <TextView
        android:id="@+id/ThirdText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_weight="1">
    </TextView>

    <TextView
        android:id="@+id/FourthText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_weight="1">
    </TextView>
</LinearLayout>

</RelativeLayout>