<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dashboard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/dashboard"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/green_view"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/dashboard_text"
        android:layout_marginTop="50dp"
        android:background="@color/green" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="150dp"
        android:layout_alignTop="@id/green_view"
        android:layout_alignStart="@id/green_view"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/no1"
            android:textColor="@color/white"
            android:textAlignment="viewStart"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/work"
            android:textColor="@color/white"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tctm"
            android:textColor="@color/white"
            android:textAlignment="viewStart"
            android:textSize="15dp" />

    </LinearLayout>

    <View
        android:id="@+id/orange_view"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/green_view"
        android:layout_marginTop="20dp"
        android:background="@color/orange" />

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="150dp"
        android:layout_alignTop="@id/orange_view"
        android:layout_alignStart="@id/orange_view"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/no2"
            android:textColor="@color/white"
            android:textAlignment="viewStart"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/visit"
            android:textColor="@color/white"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/tctm"
            android:textColor="@color/white"
            android:textAlignment="viewStart"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/task_layout"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_below="@id/orange_view"
        android:layout_marginTop="40dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/FirstText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/parts"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1">
        </TextView>

        <TextView
            android:id="@+id/SecondText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clinet_name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1">
        </TextView>

        <TextView
            android:id="@+id/ThirdText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1">
        </TextView>

        <TextView
            android:id="@+id/FourthText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_weight="1">
        </TextView>
    </LinearLayout>

</RelativeLayout>