<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"
        android:layout_marginTop="70dp"
        android:padding="10dp">

        <EditText
            android:id="@+id/user_edittext"
            android:layout_width="350dp"
            android:layout_height="65dp"
            android:hint="@string/usernameEmail"/>

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="350dp"
            android:layout_height="65dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@id/linear_layout1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signupRedirectText"
            android:layout_width="60dp"
            android:layout_height="23dp"
            android:background="@color/white"
            android:gravity="left"
            android:paddingLeft="5dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="#AB47BC"
            android:visibility="gone"
            tools:ignore="RtlHardcoded,TouchTargetSizeCheck" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/app_color"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20dp" />

</RelativeLayout>