<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".admin.AddEmployeeActivity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp" />
        
        <EditText
            android:id="@+id/nameed"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailed"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/contact"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/contacted"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passworded"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Type"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/typeed"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:background="@color/app_color"
            android:text="@string/add_employee"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>